# idle-game

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT_GUIDELINES.md  LICENSE  README.md  RELEASE-v0.1.0.md  build.bat  build.sh  index.html  package-lock.json  package.json  playwright.config.js  server.py
css/: ascii-style.css  style.css
docs/: AGENTS.md  DESIGN.md  DEVELOPMENT_GUIDELINES.md  SYNTAX_CHECK.md  TEST_CASES.md  sequence_diagram_explanation.md  unit_tests.md
js/: AGENTS.md  achievements.js  bootstrap.js  crafting.js  game.js  i18n.js  statistics.js  unlocks.js  workers.js
playwright-report/: index.html
scripts/: debug-upgrade-dom.js  lint-syntax.js
src/: AGENTS.md  lib.rs
tests/: AGENTS.md  achievement-notification-css.test.js  achievement-notification.test.js  achievements.test.js  autoclicker-behavior.test.js  buy-button.test.js  click-after-failure.test.js  comprehensive-tab.test.js  core-issues-fixed.test.js  crafting.test.js  debug-tab.test.js  debug-upgrade-cost.test.js  diagnose-upgrade-init.test.js  fix-all-issues.test.js  get-statistics.test.js  monkey-test.test.js  multi-tab.test.js  no-undefined-display.test.js  particle-effect.test.js  resource-update.test.js  responsive-iphone-15-pro.test.js  responsive-layout.test.js  responsive.test.js  statistics-panel.test.js  statistics.test.js  syntax-check.test.js  tab-evidence.test.js  tab-structure.test.js  task-10-wasm-export.test.js  unlock-functions.test.js  unlocks.test.js  upgrade-cost-debug.test.js  upgrade-cost-recursive-borrow.test.js  upgrade-cost-update.test.js  (+3 more)
(+22 files in other folders)
